--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,4 @@ lalrpop = "0.19.7"
 [dependencies]
 lalrpop-util = { version = "0.19.7", features = ["lexer"] }
 regex = "1"
+plonky2 = { git = "https://github.com/mir-protocol/plonky2" }
